constraint_hasher/gen/ConstraintsParser.py
# Generated from Constraints.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ConstraintsParser ( Parser ):

    grammarFileName = "Constraints.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ReadLSB'", "'Read'", "'Eq'", "'Sle'", 
                     "'And'", "'Or'", "'LShr'", "'ZExt'", "'Select'", "':'", 
                     "'('", "')'", "'N'", "'['", "','", "']'", "'='", "'array'", 
                     "'->'", "'symbolic'", "'false'", "'true'", "'@'", "'w32'", 
                     "'w8'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "W32", "W8", "HEX_VALUE", "INTEGER_VALUE", "VARIABLE", 
                      "WS" ]

    RULE_constraints = 0
    RULE_expression = 1
    RULE_element = 2
    RULE_operator = 3
    RULE_aliasExpression = 4
    RULE_parentExpression = 5
    RULE_alias = 6
    RULE_indexBuffer = 7
    RULE_indexPair = 8
    RULE_buffer = 9
    RULE_arrayDeclaration = 10
    RULE_literal = 11
    RULE_length = 12
    RULE_integerValue = 13
    RULE_variable = 14
    RULE_array_variable = 15
    RULE_normal_variable = 16
    RULE_dataType = 17
    RULE_atOp = 18

    ruleNames =  [ "constraints", "expression", "element", "operator", "aliasExpression", 
                   "parentExpression", "alias", "indexBuffer", "indexPair", 
                   "buffer", "arrayDeclaration", "literal", "length", "integerValue", 
                   "variable", "array_variable", "normal_variable", "dataType", 
                   "atOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    W32=24
    W8=25
    HEX_VALUE=26
    INTEGER_VALUE=27
    VARIABLE=28
    WS=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ConstraintsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstraintsParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ConstraintsParser.ExpressionContext,i)


        def arrayDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstraintsParser.ArrayDeclarationContext)
            else:
                return self.getTypedRuleContext(ConstraintsParser.ArrayDeclarationContext,i)


        def getRuleIndex(self):
            return ConstraintsParser.RULE_constraints

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraints" ):
                listener.enterConstraints(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraints" ):
                listener.exitConstraints(self)




    def constraints(self):

        localctx = ConstraintsParser.ConstraintsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_constraints)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self.expression()
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 476081150) != 0)):
                    break

            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 43
                self.arrayDeclaration()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self):
            return self.getTypedRuleContext(ConstraintsParser.OperatorContext,0)


        def dataType(self):
            return self.getTypedRuleContext(ConstraintsParser.DataTypeContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstraintsParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ConstraintsParser.ExpressionContext,i)


        def parentExpression(self):
            return self.getTypedRuleContext(ConstraintsParser.ParentExpressionContext,0)


        def aliasExpression(self):
            return self.getTypedRuleContext(ConstraintsParser.AliasExpressionContext,0)


        def element(self):
            return self.getTypedRuleContext(ConstraintsParser.ElementContext,0)


        def getRuleIndex(self):
            return ConstraintsParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = ConstraintsParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.operator()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==24 or _la==25:
                    self.state = 50
                    self.dataType()


                self.state = 54 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 53
                        self.expression()

                    else:
                        raise NoViableAltException(self)
                    self.state = 56 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.parentExpression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.aliasExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.element()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(ConstraintsParser.VariableContext,0)


        def alias(self):
            return self.getTypedRuleContext(ConstraintsParser.AliasContext,0)


        def literal(self):
            return self.getTypedRuleContext(ConstraintsParser.LiteralContext,0)


        def getRuleIndex(self):
            return ConstraintsParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)




    def element(self):

        localctx = ConstraintsParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_element)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.variable()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.alias()
                pass
            elif token in [21, 22, 26, 27]:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ConstraintsParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)




    def operator(self):

        localctx = ConstraintsParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1022) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AliasExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alias(self):
            return self.getTypedRuleContext(ConstraintsParser.AliasContext,0)


        def parentExpression(self):
            return self.getTypedRuleContext(ConstraintsParser.ParentExpressionContext,0)


        def getRuleIndex(self):
            return ConstraintsParser.RULE_aliasExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAliasExpression" ):
                listener.enterAliasExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAliasExpression" ):
                listener.exitAliasExpression(self)




    def aliasExpression(self):

        localctx = ConstraintsParser.AliasExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_aliasExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.alias()
            self.state = 71
            self.match(ConstraintsParser.T__9)
            self.state = 72
            self.parentExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParentExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ConstraintsParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ConstraintsParser.RULE_parentExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParentExpression" ):
                listener.enterParentExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParentExpression" ):
                listener.exitParentExpression(self)




    def parentExpression(self):

        localctx = ConstraintsParser.ParentExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parentExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(ConstraintsParser.T__10)
            self.state = 75
            self.expression()
            self.state = 76
            self.match(ConstraintsParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AliasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_VALUE(self):
            return self.getToken(ConstraintsParser.INTEGER_VALUE, 0)

        def getRuleIndex(self):
            return ConstraintsParser.RULE_alias

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlias" ):
                listener.enterAlias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlias" ):
                listener.exitAlias(self)




    def alias(self):

        localctx = ConstraintsParser.AliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_alias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(ConstraintsParser.T__12)
            self.state = 79
            self.match(ConstraintsParser.INTEGER_VALUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexBufferContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def indexPair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstraintsParser.IndexPairContext)
            else:
                return self.getTypedRuleContext(ConstraintsParser.IndexPairContext,i)


        def getRuleIndex(self):
            return ConstraintsParser.RULE_indexBuffer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexBuffer" ):
                listener.enterIndexBuffer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexBuffer" ):
                listener.exitIndexBuffer(self)




    def indexBuffer(self):

        localctx = ConstraintsParser.IndexBufferContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_indexBuffer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(ConstraintsParser.T__13)
            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 82
                    self.indexPair()
                    self.state = 83
                    self.match(ConstraintsParser.T__14) 
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 90
            self.indexPair()
            self.state = 91
            self.match(ConstraintsParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexPairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEX_VALUE(self, i:int=None):
            if i is None:
                return self.getTokens(ConstraintsParser.HEX_VALUE)
            else:
                return self.getToken(ConstraintsParser.HEX_VALUE, i)

        def getRuleIndex(self):
            return ConstraintsParser.RULE_indexPair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexPair" ):
                listener.enterIndexPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexPair" ):
                listener.exitIndexPair(self)




    def indexPair(self):

        localctx = ConstraintsParser.IndexPairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_indexPair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ConstraintsParser.HEX_VALUE)
            self.state = 94
            self.match(ConstraintsParser.T__16)
            self.state = 95
            self.match(ConstraintsParser.HEX_VALUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BufferContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEX_VALUE(self, i:int=None):
            if i is None:
                return self.getTokens(ConstraintsParser.HEX_VALUE)
            else:
                return self.getToken(ConstraintsParser.HEX_VALUE, i)

        def getRuleIndex(self):
            return ConstraintsParser.RULE_buffer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuffer" ):
                listener.enterBuffer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuffer" ):
                listener.exitBuffer(self)




    def buffer_(self):

        localctx = ConstraintsParser.BufferContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_buffer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(ConstraintsParser.T__13)
            self.state = 99 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 98
                self.match(ConstraintsParser.HEX_VALUE)
                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==26):
                    break

            self.state = 103
            self.match(ConstraintsParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal_variable(self):
            return self.getTypedRuleContext(ConstraintsParser.Normal_variableContext,0)


        def length(self):
            return self.getTypedRuleContext(ConstraintsParser.LengthContext,0)


        def dataType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstraintsParser.DataTypeContext)
            else:
                return self.getTypedRuleContext(ConstraintsParser.DataTypeContext,i)


        def buffer_(self):
            return self.getTypedRuleContext(ConstraintsParser.BufferContext,0)


        def getRuleIndex(self):
            return ConstraintsParser.RULE_arrayDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDeclaration" ):
                listener.enterArrayDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDeclaration" ):
                listener.exitArrayDeclaration(self)




    def arrayDeclaration(self):

        localctx = ConstraintsParser.ArrayDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arrayDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(ConstraintsParser.T__17)
            self.state = 106
            self.normal_variable()
            self.state = 107
            self.match(ConstraintsParser.T__13)
            self.state = 108
            self.length()
            self.state = 109
            self.match(ConstraintsParser.T__15)
            self.state = 110
            self.match(ConstraintsParser.T__9)
            self.state = 111
            self.dataType()
            self.state = 112
            self.match(ConstraintsParser.T__18)
            self.state = 113
            self.dataType()
            self.state = 114
            self.match(ConstraintsParser.T__16)
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.state = 115
                self.match(ConstraintsParser.T__19)
                pass
            elif token in [14]:
                self.state = 116
                self.buffer_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integerValue(self):
            return self.getTypedRuleContext(ConstraintsParser.IntegerValueContext,0)


        def getRuleIndex(self):
            return ConstraintsParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = ConstraintsParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_literal)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26, 27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.integerValue()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(ConstraintsParser.T__20)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.match(ConstraintsParser.T__21)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LengthContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_VALUE(self):
            return self.getToken(ConstraintsParser.INTEGER_VALUE, 0)

        def getRuleIndex(self):
            return ConstraintsParser.RULE_length

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLength" ):
                listener.enterLength(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLength" ):
                listener.exitLength(self)




    def length(self):

        localctx = ConstraintsParser.LengthContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_length)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ConstraintsParser.INTEGER_VALUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_VALUE(self):
            return self.getToken(ConstraintsParser.INTEGER_VALUE, 0)

        def HEX_VALUE(self):
            return self.getToken(ConstraintsParser.HEX_VALUE, 0)

        def getRuleIndex(self):
            return ConstraintsParser.RULE_integerValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegerValue" ):
                listener.enterIntegerValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegerValue" ):
                listener.exitIntegerValue(self)




    def integerValue(self):

        localctx = ConstraintsParser.IntegerValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_integerValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            _la = self._input.LA(1)
            if not(_la==26 or _la==27):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal_variable(self):
            return self.getTypedRuleContext(ConstraintsParser.Normal_variableContext,0)


        def array_variable(self):
            return self.getTypedRuleContext(ConstraintsParser.Array_variableContext,0)


        def getRuleIndex(self):
            return ConstraintsParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = ConstraintsParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_variable)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.normal_variable()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.array_variable()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_variableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def indexBuffer(self):
            return self.getTypedRuleContext(ConstraintsParser.IndexBufferContext,0)


        def atOp(self):
            return self.getTypedRuleContext(ConstraintsParser.AtOpContext,0)


        def normal_variable(self):
            return self.getTypedRuleContext(ConstraintsParser.Normal_variableContext,0)


        def getRuleIndex(self):
            return ConstraintsParser.RULE_array_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_variable" ):
                listener.enterArray_variable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_variable" ):
                listener.exitArray_variable(self)




    def array_variable(self):

        localctx = ConstraintsParser.Array_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_array_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.indexBuffer()
            self.state = 133
            self.atOp()
            self.state = 134
            self.normal_variable()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Normal_variableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(ConstraintsParser.VARIABLE, 0)

        def getRuleIndex(self):
            return ConstraintsParser.RULE_normal_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNormal_variable" ):
                listener.enterNormal_variable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNormal_variable" ):
                listener.exitNormal_variable(self)




    def normal_variable(self):

        localctx = ConstraintsParser.Normal_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_normal_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(ConstraintsParser.VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def W32(self):
            return self.getToken(ConstraintsParser.W32, 0)

        def W8(self):
            return self.getToken(ConstraintsParser.W8, 0)

        def getRuleIndex(self):
            return ConstraintsParser.RULE_dataType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataType" ):
                listener.enterDataType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataType" ):
                listener.exitDataType(self)




    def dataType(self):

        localctx = ConstraintsParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_dataType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            _la = self._input.LA(1)
            if not(_la==24 or _la==25):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ConstraintsParser.RULE_atOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtOp" ):
                listener.enterAtOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtOp" ):
                listener.exitAtOp(self)




    def atOp(self):

        localctx = ConstraintsParser.AtOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_atOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(ConstraintsParser.T__22)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





